tests/fun-dec-wrong-num-pats/out.txt
error: wrong number of patterns in function declaration: expected 1, found 2
  ┌─ err.sml:2:7
  │
2 │   | f 3 4 = 5
  │       ^^^

typechecking failed
